--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Nuestros restaurantes</title>
   </head>
   <body>
-    
+    <h1>« Nuestros restaurantes »</h1>
+    <img src="/image/barcelona.webp" alt="">
+    <img src="/image/buenos-aires.webp" alt="">
+    <img src="/image/madrid.webp" alt="">
+    <img src="/image/miami.webp" alt="">
+    <img src="/image/paris.webp" alt="">
+    <img src="/image/pipa.webp" alt="">
+    <img src="/image/rio-de-janeiro.webp" alt="">
+    <img src="/image/roma.webp" alt="">
+    <img src="/image/rosario.webp" alt="">
+    <img src="/image/tokio.webp" alt="">
     
     <script type="module" src="/main.js"></script>
   </body>
