--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   </head>
   <body>
     <h1>« Nuestros restaurantes »</h1>
-    <img src="/image/barcelona.webp" alt="">
-    <img src="/image/buenos-aires.webp" alt="">
-    <img src="/image/madrid.webp" alt="">
-    <img src="/image/miami.webp" alt="">
-    <img src="/image/paris.webp" alt="">
-    <img src="/image/pipa.webp" alt="">
-    <img src="/image/rio-de-janeiro.webp" alt="">
-    <img src="/image/roma.webp" alt="">
-    <img src="/image/rosario.webp" alt="">
-    <img src="/image/tokio.webp" alt="">
+    <img src="/image/barcelona.webp" alt="restaurante de barcelona">
+    <img src="/image/buenos-aires.webp" alt="restaurante de buenos aires">
+    <img src="/image/madrid.webp" alt="restaurante de madrid">
+    <img src="/image/miami.webp" alt="restaurante de miami">
+    <img src="/image/paris.webp" alt="restaurante de paris">
+    <img src="/image/pipa.webp" alt="restaurante de pipa">
+    <img src="/image/rio-de-janeiro.webp" alt="restaurante de rio de janeiro">
+    <img src="/image/roma.webp" alt="restaurante de roma">
+    <img src="/image/rosario.webp" alt="restaurante de rosario">
+    <img src="/image/tokio.webp" alt="restaurante de tokio">
     
     <script type="module" src="/main.js"></script>
   </body>
