Diseñando las imágenes y agregando bordes

--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
   </head>
   <body>
     <h1>« Nuestros restaurantes »</h1>
-    <img src="/image/barcelona.webp" alt="restaurante de barcelona">
-    <img src="/image/buenos-aires.webp" alt="restaurante de buenos aires">
-    <img src="/image/madrid.webp" alt="restaurante de madrid">
-    <img src="/image/miami.webp" alt="restaurante de miami">
-    <img src="/image/paris.webp" alt="restaurante de paris">
-    <img src="/image/pipa.webp" alt="restaurante de pipa">
-    <img src="/image/rio-de-janeiro.webp" alt="restaurante de rio de janeiro">
-    <img src="/image/roma.webp" alt="restaurante de roma">
-    <img src="/image/rosario.webp" alt="restaurante de rosario">
-    <img src="/image/tokio.webp" alt="restaurante de tokio">
-    
+    <div class="image-centrada">
+        <img src="/image/barcelona.webp" alt="restaurante de barcelona">
+        <img src="/image/buenos-aires.webp" alt="restaurante de buenos aires">
+        <img src="/image/madrid.webp" alt="restaurante de madrid">
+        <img src="/image/miami.webp" alt="restaurante de miami">
+        <img src="/image/paris.webp" alt="restaurante de paris">
+        <img src="/image/pipa.webp" alt="restaurante de pipa">
+        <img src="/image/rio-de-janeiro.webp" alt="restaurante de rio de janeiro">
+        <img src="/image/roma.webp" alt="restaurante de roma">
+        <img src="/image/rosario.webp" alt="restaurante de rosario">
+        <img src="/image/tokio.webp" alt="restaurante de tokio">
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
